--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a {
     align-items: center;
     width: 92px;
     color: #100A30;
-/*    border: 2px solid green;*/
+    /*    border: 2px solid green;*/
 }
 
 .nav-main {
@@ -269,7 +269,7 @@ a {
 .services-title {}
 
 .price-block-head {
-/*    border: 1px solid yellow;*/
+    /*    border: 1px solid yellow;*/
     text-align: center;
 }
 
@@ -292,12 +292,14 @@ a {
     font-size: 14px;
     line-height: 22px;
     color: #4C4764;
+}
 
-
+.annuel:after {
+      content: "\1F389";  
 }
 
 .prices {
-/*    border: 1px solid green;*/
+    /*    border: 1px solid green;*/
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -306,7 +308,7 @@ a {
 .price {
     width: 395px;
     min-height: 398px;
-/*    border: 1px solid red;*/
+    /*    border: 1px solid red;*/
 }
 
 .price1 {
@@ -564,6 +566,14 @@ a {
     color: #4C4764;
 }
 
+.icon{
+    font-size: 16px
+}
+
+.icon:before{
+  content: "\1F44F";  
+}
+
 .signature {
     font-size: 16px;
     font-style: normal;
@@ -584,18 +594,101 @@ a {
     margin: 0 auto 152px;
     border-radius: 8px;
 }
+
 .subscription-temp {
     padding: 94px 0 8px 0;
-  color: #fff;
+    color: #fff;
 }
+
 .subscription-header {
     color: #fff;
 }
+
 .sign-btn-down {
-background-color:#100A30;
+    background-color: #100A30;
 }
 
 .sign-btn-down:hover {
     border: 1px solid #fff;
     background-color: transparent;
 }
+
+footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.preview {}
+
+.footer-element {
+    width: 20%;
+}
+
+.preiew-txt {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.18px;
+    color: #4C4764;
+
+}
+
+.social {
+/*
+    width: 100px;
+    height: 100px;
+    border: 1px solid red;
+*/
+}
+
+.fab {
+    color:  #100A30;
+    font-size: 30px;
+    margin: 5px;
+}
+
+.fab:hover {
+    color:  #624DE3;
+}
+
+.functions {}
+
+.footer-element-header {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #100A30;
+
+}
+
+.footer-element-list {
+    padding: 0;
+}
+
+.footer-element-item {
+    list-style-type: none;
+    color: #4C4764;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
+
+.about {}
+
+.about-header {}
+
+.about-item {}
+
+.ressources {}
+
+.ressources-header {}
+
+.ressources-item {}
